OWEXT-14|openway-tasklist - conversione ad Alfresco 6